--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "typeface-fredoka-one": "0.0.72"
   },
   "scripts": {
     "start": "react-scripts start",
